# ims-json

./: .gitignore  CMakeLists.txt  README.md  build.sh  ims-json.sln  ims-json.vcxproj  ims-json.vcxproj.filters
MMapJson/: citylots.json.REMOVED.git-id  json.c  json.cpp  json.h  json.hpp  json2.c  json2.cpp  json2.h  magic.json.REMOVED.git-id  main.cpp  memutil.c  memutil.h  test.json
MMapJson.xcodeproj/: project.pbxproj
MMapJson.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
docs/json_h/: index.html  toc.html
docs/json_h/Classes/_MMapJson_json2_multideclaration_block/: index.html  toc.html
docs/json_h/Classes/ims/: index.html  toc.html
json.xcodeproj/: project.pbxproj
json.xcodeproj/project.xcworkspace/xcuserdata/bghoward.xcuserdatad/: UserInterfaceState.xcuserstate
json.xcodeproj/xcuserdata/bghoward.xcuserdatad/xcschemes/: json.xcscheme  jsonc.xcscheme  test.xcscheme  xcschememanagement.plist
jsonc/: main.c
src/: json.c  json.h  json.hpp
test/: citylots2.json.REMOVED.git-id  main.cpp  small.json  test.json  test.sh
test/invalid/: extra-comma-in-obj.json  missing-comma-in-array.json  missing-comma-in-object.json
test/valid-out/: complex-array.json  null-byte-in-string.json  real-exponent.json  too-big-negative-integer.json  too-big-positive-integer.json
